--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,17 @@
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
-* text=auto
+# * text=auto
+
+
+###############################################################################
+# Just what is this thing called "text"?
+###############################################################################
+*.cs   text
+*.json text
+*.md   text
+*.txt  text
+*.xml  text
 
 ###############################################################################
 # Set default behavior for command prompt diff.
@@ -40,9 +50,9 @@
 #
 # image files are treated as binary by default.
 ###############################################################################
-#*.jpg   binary
-#*.png   binary
-#*.gif   binary
+*.jpg   binary
+*.png   binary
+*.gif   binary
 
 ###############################################################################
 # diff behavior for common document formats
