--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,7 @@
 ###############################################################################
 # Just what is this thing called "text"?
 ###############################################################################
-*.cs   text
+*.cs   binary
 *.json text
 *.md   text
 *.txt  text
