--- a/.gitattributes
+++ b/.gitattributes
@@ -7,7 +7,7 @@
 ###############################################################################
 # Just what is this thing called "text"?
 ###############################################################################
-*.cs   binary
+*.cs   text
 *.json text
 *.md   text
 *.txt  text
@@ -20,7 +20,7 @@
 # default for csharp files.
 # Note: This is only used by command line
 ###############################################################################
-#*.cs     diff=csharp
+*.cs     diff=csharp
 
 ###############################################################################
 # Set the merge driver for project and solution files
