--- a/BeyondStorage/config.json
+++ b/BeyondStorage/config.json
@@ -9,6 +9,6 @@
   "enableForReload": true,
   "enableForVehicleRefuel": true,
   "enableForVehicleRepair": true,
-  "serverSyncConfig": true
-  "isDebug": false,
+  "serverSyncConfig": true,
+  "isDebug": false
 }
