Add config value validation for range

--- a/BeyondStorage/config.json
+++ b/BeyondStorage/config.json
@@ -10,5 +10,5 @@
   "enableForVehicleRefuel": true,
   "enableForVehicleRepair": true,
   "serverSyncConfig": true,
-  "isDebug": false
+  "isDebug": false,
 }
