Refactor code to allow for future addition of pulling items from workstation outputs

--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Scripts\ContainerLogic\Item\ItemRepair.cs" />
     <Compile Include="Scripts\ContainerLogic\PowerSource\PowerSourceRefuel.cs" />
     <Compile Include="Scripts\ContainerLogic\Ranged\Ranged.cs" />
+    <Compile Include="Scripts\ContainerLogic\WorkstationUtils.cs" />
     <Compile Include="Scripts\ContainerLogic\VehicleUtils.cs" />
     <Compile Include="Scripts\ContainerLogic\Vehicle\VehicleRefuel.cs" />
     <Compile Include="Scripts\ContainerLogic\Vehicle\VehicleRepair.cs" />
