--- a/BeyondStorage/config.json
+++ b/BeyondStorage/config.json
@@ -1,14 +1,16 @@
 {
-  "range": -1.0,
-  "onlyStorageCrates": false,
-  "pullFromVehicleStorage": true,
-  "enableForBlockRepair": true,
-  "enableForBlockUpgrade": true,
-  "enableForGeneratorRefuel": true,
-  "enableForItemRepair": true,
-  "enableForReload": true,
-  "enableForVehicleRefuel": true,
-  "enableForVehicleRepair": true,
-  "serverSyncConfig": true,
-  "isDebug": false,
+    "range": -1.0,
+    "onlyStorageCrates": false,
+    "pullFromVehicleStorage": true,
+    "pullFromWorkstationOutputs": true,
+    "enableForBlockRepair": true,
+    "enableForBlockUpgrade": true,
+    "enableForGeneratorRefuel": true,
+    "enableForItemRepair": true,
+    "enableForReload": true,
+    "enableForVehicleRefuel": true,
+    "enableForVehicleRepair": true,
+    "serverSyncConfig": true,
+    "isDebug": false,
+    "isDebugLogSettingsAccess": false,
 }
