--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Harmony\Item\Repair\XUiC_ItemActionList_Patches.cs" />
     <Compile Include="Harmony\Item\XUiM_PlayerInventory_Patches.cs" />
     <Compile Include="Harmony\PowerSource\Refuel\XUiC_PowerSourceStats_Patches.cs" />
+    <Compile Include="Harmony\Recipe\Current_Workstation_Recipe_Patches.cs" />
     <Compile Include="Harmony\Recipe\Workstation_Recipe_Patches.cs" />
     <Compile Include="Harmony\Reload\_3P\Animator3PRangedReloadState_Patches.cs" />
     <Compile Include="Harmony\Reload\AnimatorCommon.cs" />
