--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Scripts\ContainerLogic\PowerSource\PowerSourceRefuel.cs" />
     <Compile Include="Scripts\ContainerLogic\Ranged\Ranged.cs" />
     <Compile Include="Scripts\ContainerLogic\Recipe\WorkstationRecipe.cs" />
+    <Compile Include="Scripts\ContainerLogic\DewCollectorUtils.cs" />
     <Compile Include="Scripts\ContainerLogic\WorkstationUtils.cs" />
     <Compile Include="Scripts\ContainerLogic\VehicleUtils.cs" />
     <Compile Include="Scripts\ContainerLogic\Vehicle\VehicleRefuel.cs" />
