--- a/BeyondStorage/config.json
+++ b/BeyondStorage/config.json
@@ -1,8 +1,9 @@
 {
     "range": -1.0,
     "onlyStorageCrates": false,
-    "pullFromVehicleStorage": true,
+    "pullFromDewCollectors": true,
     "pullFromWorkstationOutputs": true,
+    "pullFromVehicleStorage": true,
     "enableForBlockRepair": true,
     "enableForBlockUpgrade": true,
     "enableForGeneratorRefuel": true,
@@ -12,5 +13,5 @@
     "enableForVehicleRepair": true,
     "serverSyncConfig": true,
     "isDebug": false,
-    "isDebugLogSettingsAccess": false,
+    "isDebugLogSettingsAccess": false
 }
