Fix two UI/UX issues; Speed improvements
- Fixed that if a backpack item was selected while a workstation was open, it was deselected and replaced by selecting a recipe instead when some workstation completes an item
- Fixed that recipes requiring ingredients with Quality (only Batteries in vanilla/base game) could only be pulled from the backpack or toolbelt (ancient bug that has not been fixed. thanks to @raulfin for spotting it)

--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Harmony\Item\Craft\XUiC_RecipeCraftCount_Patches.cs" />
     <Compile Include="Harmony\Item\Craft\XUiC_RecipeList_Patches.cs" />
     <Compile Include="Harmony\Item\Craft\XUiM_PlayerInventory_Craft_Patches.cs" />
+    <Compile Include="Harmony\Item\Action\Item_Action_Entry_Craft_Patches.cs" />
     <Compile Include="Harmony\Item\Repair\ItemActionEntryRepair_Patches.cs" />
     <Compile Include="Harmony\Item\Repair\XUiC_ItemActionList_Patches.cs" />
     <Compile Include="Harmony\Item\XUiM_PlayerInventory_Patches.cs" />
