Fix ItemTexture patching so painting worksl Full commit of config changes as well

--- a/BeyondStorage/config.json
+++ b/BeyondStorage/config.json
@@ -5,6 +5,7 @@
     "pullFromWorkstationOutputs": true,
     "pullFromVehicleStorage": true,
     "enableForBlockRepair": true,
+    "enableForBlockTexture": true,
     "enableForBlockUpgrade": true,
     "enableForGeneratorRefuel": true,
     "enableForItemRepair": true,
