--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -85,7 +85,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\Common\EventsUtil.cs" />
     <Compile Include="Scripts\Configuration\ModConfig.cs" />
-    <Compile Include="Scripts\ContainerLogic\BatchRemovalContext.cs" />
+    <Compile Include="Scripts\ContainerLogic\StorageAccessContext.cs" />
     <Compile Include="Scripts\ContainerLogic\Block\BlockRepair.cs" />
     <Compile Include="Scripts\ContainerLogic\Block\BlockUpgrade.cs" />
     <Compile Include="Scripts\ContainerLogic\ConfigSnapshot.cs" />
@@ -107,8 +107,10 @@
     <Compile Include="Scripts\Server\NetPackageBeyondStorageConfig.cs" />
     <Compile Include="Scripts\Server\NetPackageLockedTEs.cs" />
     <Compile Include="Scripts\Server\ServerUtils.cs" />
+    <Compile Include="Scripts\Utils\DebutUtil.cs" />
     <Compile Include="Scripts\Utils\FileUtil.cs" />
     <Compile Include="Scripts\Utils\CodesUtil.cs" />
+    <Compile Include="Scripts\Utils\MethodCallStatistics.cs" />
     <Compile Include="Scripts\Utils\PatchUtil.cs" />
     <Compile Include="Scripts\Utils\ItemUtil.cs" />
     <Compile Include="Scripts\Utils\LogUtil.cs" />
