--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -107,7 +107,7 @@
     <Compile Include="Scripts\Server\NetPackageBeyondStorageConfig.cs" />
     <Compile Include="Scripts\Server\NetPackageLockedTEs.cs" />
     <Compile Include="Scripts\Server\ServerUtils.cs" />
-    <Compile Include="Scripts\Utils\DebutUtil.cs" />
+    <Compile Include="Scripts\Utils\DebugUtil.cs" />
     <Compile Include="Scripts\Utils\FileUtil.cs" />
     <Compile Include="Scripts\Utils\CodesUtil.cs" />
     <Compile Include="Scripts\Utils\MethodCallStatistics.cs" />
