Refactor by naming all classes with semantic intent

--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -89,7 +89,7 @@
     <Compile Include="Scripts\ContainerLogic\Block\BlockRepair.cs" />
     <Compile Include="Scripts\ContainerLogic\Block\BlockUpgrade.cs" />
     <Compile Include="Scripts\ContainerLogic\ConfigSnapshot.cs" />
-    <Compile Include="Scripts\ContainerLogic\ContainerUtils.cs" />
+    <Compile Include="Scripts\ContainerLogic\TileEntityLockManager.cs" />
     <Compile Include="Scripts\ContainerLogic\Item\BatchPaintContext.cs" />
     <Compile Include="Scripts\ContainerLogic\Item\ItemCommon.cs" />
     <Compile Include="Scripts\ContainerLogic\Item\ItemTexture.cs" />
@@ -98,23 +98,23 @@
     <Compile Include="Scripts\ContainerLogic\PowerSource\PowerSourceRefuel.cs" />
     <Compile Include="Scripts\ContainerLogic\Ranged\Ranged.cs" />
     <Compile Include="Scripts\ContainerLogic\Recipe\WorkstationRecipe.cs" />
-    <Compile Include="Scripts\ContainerLogic\DewCollectorUtils.cs" />
-    <Compile Include="Scripts\ContainerLogic\WorkstationUtils.cs" />
+    <Compile Include="Scripts\ContainerLogic\DewCollectorStateManager.cs" />
+    <Compile Include="Scripts\ContainerLogic\WorkstationStateManager.cs" />
     <Compile Include="Scripts\ContainerLogic\Vehicle\VehicleRefuel.cs" />
     <Compile Include="Scripts\ContainerLogic\Vehicle\VehicleRepair.cs" />
     <Compile Include="Scripts\ContainerLogic\WorldPlayerContext.cs" />
     <Compile Include="Scripts\Server\NetPackageBeyondStorageConfig.cs" />
     <Compile Include="Scripts\Server\NetPackageLockedTEs.cs" />
     <Compile Include="Scripts\Server\ServerUtils.cs" />
-    <Compile Include="Scripts\Utils\DebugUtil.cs" />
-    <Compile Include="Scripts\Utils\FileUtil.cs" />
-    <Compile Include="Scripts\Utils\CodesUtil.cs" />
+    <Compile Include="Scripts\Utils\StackTraceProvider.cs" />
+    <Compile Include="Scripts\Utils\ModPathManager.cs" />
+    <Compile Include="Scripts\Utils\ILCodeMatcher.cs" />
     <Compile Include="Scripts\ContainerLogic\ItemPropertiesCache.cs" />
-    <Compile Include="Scripts\Utils\ListProvider.cs" />
-    <Compile Include="Scripts\Utils\MethodCallStatistics.cs" />
-    <Compile Include="Scripts\Utils\PatchUtil.cs" />
-    <Compile Include="Scripts\Utils\ItemUtil.cs" />
-    <Compile Include="Scripts\Utils\LogUtil.cs" />
+    <Compile Include="Scripts\Utils\CollectionFactory.cs" />
+    <Compile Include="Scripts\Utils\PerformanceProfiler.cs" />
+    <Compile Include="Scripts\Utils\ILPatchEngine.cs" />
+    <Compile Include="Scripts\Utils\ItemStackHelper.cs" />
+    <Compile Include="Scripts\Utils\Logger.cs" />
     <Compile Include="Scripts\Utils\TimeBasedCache.cs" />
     <Compile Include="Scripts\Utils\TimeBasedDictionaryCache.cs" />
     <Compile Include="Scripts\Utils\UniqueItemTypes.cs" />
