--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Scripts\Game\PowerSource\PowerSourceRefuel.cs" />
     <Compile Include="Scripts\Game\Ranged\Ranged.cs" />
     <Compile Include="Scripts\Game\Recipe\WorkstationRecipe.cs" />
+    <Compile Include="Scripts\Storage\StorageDiscoveryService.cs" />
+    <Compile Include="Scripts\Storage\StorageSourceCollection.cs" />
     <Compile Include="Scripts\TileEntities\DewCollectorStateManager.cs" />
     <Compile Include="Scripts\TileEntities\WorkstationStateManager.cs" />
     <Compile Include="Scripts\Game\Vehicle\VehicleRefuel.cs" />
