--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -84,18 +84,21 @@
     <Compile Include="HarmonyPatches\Vehicle\Repair\XUiM_Vehicle_Patches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\Data\IStorageSource.cs" />
+    <Compile Include="Scripts\Data\ItemStackReferenceComparer.cs" />
     <Compile Include="Scripts\Data\StorageSourceAdapter.cs" />
     <Compile Include="Scripts\Data\StorageSourceItemDataStore.cs" />
+    <Compile Include="Scripts\Diagnostics\NameLookups.cs" />
     <Compile Include="Scripts\Infrastructure\ModLifecycleManager.cs" />
     <Compile Include="Scripts\Configuration\ModConfig.cs" />
+    <Compile Include="Scripts\Infrastructure\TypeMatchingHelper.cs" />
+    <Compile Include="Scripts\Storage\AllowedSourcesSnapshot.cs" />
     <Compile Include="Scripts\Storage\ItemStackCacheManager.cs" />
-    <Compile Include="Scripts\Storage\ItemStackExtractionService.cs" />
+    <Compile Include="Scripts\Data\ItemTypeNameLookupCache.cs" />
     <Compile Include="Scripts\Storage\StorageContext.cs" />
     <Compile Include="Scripts\Game\Block\BlockRepair.cs" />
     <Compile Include="Scripts\Game\Block\BlockUpgrade.cs" />
     <Compile Include="Scripts\Configuration\ConfigSnapshot.cs" />
     <Compile Include="Scripts\Multiplayer\TileEntityLockManager.cs" />
-    <Compile Include="Scripts\Game\Item\BatchPaintContext.cs" />
     <Compile Include="Scripts\Game\Item\ItemCommon.cs" />
     <Compile Include="Scripts\Game\Item\ItemTexture.cs" />
     <Compile Include="Scripts\Game\Item\ItemCraft.cs" />
@@ -104,10 +107,12 @@
     <Compile Include="Scripts\Game\Ranged\Ranged.cs" />
     <Compile Include="Scripts\Game\Recipe\WorkstationRecipe.cs" />
     <Compile Include="Scripts\Storage\StorageContextFactory.cs" />
-    <Compile Include="Scripts\Storage\StorageDiscoveryService.cs" />
+    <Compile Include="Scripts\Storage\ItemDiscoveryService.cs" />
     <Compile Include="Scripts\Storage\StorageItemRemovalService.cs" />
     <Compile Include="Scripts\Storage\StorageQueryService.cs" />
-    <Compile Include="Scripts\Storage\StorageSourceManager.cs" />
+    <Compile Include="Scripts\Storage\StorageDataManager.cs" />
+    <Compile Include="Scripts\Storage\TileEntityItemDiscovery.cs" />
+    <Compile Include="Scripts\Storage\VehicleItemDiscovery.cs" />
     <Compile Include="Scripts\TileEntities\DewCollectorStateManager.cs" />
     <Compile Include="Scripts\TileEntities\WorkstationStateManager.cs" />
     <Compile Include="Scripts\Game\Vehicle\VehicleRefuel.cs" />
@@ -145,9 +150,9 @@
       <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\7 Days To Die\7DaysToDie_Data\Managed\LogLibrary.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\7DaysToDie_Data\Managed\Newtonsoft.Json.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Newtonsoft.Json, Version=13.0.1.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\7 Days To Die\7DaysToDie_Data\Managed\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="UnityEngine.AnimationModule">
