--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -62,6 +62,7 @@
     <Compile Include="HarmonyPatches\BeyondStorage_Init.cs" />
     <Compile Include="HarmonyPatches\Block\Repair\ItemActionRepair_Repair_Patches.cs" />
     <Compile Include="HarmonyPatches\Block\Upgrade\ItemActionRepair_Upgrade_Patches.cs" />
+    <Compile Include="HarmonyPatches\Item\Texture\ItemActionTextureBlock_FloodFill_Patch.cs" />
     <Compile Include="HarmonyPatches\UI\XUiC_CraftingQueue_Patches.cs" />
     <Compile Include="HarmonyPatches\Item\Craft\XUiC_IngredientEntry_Patches.cs" />
     <Compile Include="HarmonyPatches\Item\Craft\XUiC_RecipeCraftCount_Patches.cs" />
@@ -90,6 +91,7 @@
     <Compile Include="Scripts\Data\StorageSourceItemDataStore.cs" />
     <Compile Include="Scripts\Data\UniqueItemTypeCache.cs" />
     <Compile Include="Scripts\Diagnostics\NameLookups.cs" />
+    <Compile Include="Scripts\Game\Item\ItemActionTextureBlockExposed.cs" />
     <Compile Include="Scripts\Infrastructure\ModLifecycleManager.cs" />
     <Compile Include="Scripts\Configuration\ModConfig.cs" />
     <Compile Include="Scripts\Infrastructure\TypeMatchingHelper.cs" />
@@ -165,6 +167,9 @@
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\7 Days To Die\7DaysToDie_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
+    </Reference>
+    <Reference Include="UnityEngine.PhysicsModule">
+      <HintPath>..\..\..\..\..\SteamLibrary\steamapps\common\7 Days To Die\7DaysToDie_Data\Managed\UnityEngine.PhysicsModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
