Implement smart area painting types (not just one face, but also not a flood paint)

--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -62,6 +62,7 @@
     <Compile Include="HarmonyPatches\BeyondStorage_Init.cs" />
     <Compile Include="HarmonyPatches\Block\Repair\ItemActionRepair_Repair_Patches.cs" />
     <Compile Include="HarmonyPatches\Block\Upgrade\ItemActionRepair_Upgrade_Patches.cs" />
+    <Compile Include="HarmonyPatches\Item\Texture\ItemActionTextureBlock_fireShotLater_Patch.cs" />
     <Compile Include="HarmonyPatches\Item\Texture\ItemActionTextureBlock_FloodFill_Patch.cs" />
     <Compile Include="HarmonyPatches\UI\XUiC_CraftingQueue_Patches.cs" />
     <Compile Include="HarmonyPatches\Item\Craft\XUiC_IngredientEntry_Patches.cs" />
