--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -31,6 +31,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <Target Name="CodeQualityChecks" BeforeTargets="Build">
+    <Exec Command="python code_check.py"
+          ContinueOnError="false"
+          WorkingDirectory="$(ProjectDir)">
+      <Output TaskParameter="ExitCode" PropertyName="CodeQualityChecksExitCode" />
+    </Exec>
+    <Error Condition="'$(CodeQualityChecksExitCode)' != '0'"
+           Text="Code quality checks failed with exit code $(CodeQualityChecksExitCode). Build halted due to errors." />
+  </Target>
   <Target Name="PackageMod" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
     <Message Text="Executing mod packaging task" Importance="High" />
     <!-- Path to the compiled assembly -->
