--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -65,14 +65,13 @@
     <Message Text="Mod packaged into directory $(ModPackageDir)" Importance="High" />
   </Target>
   <ItemGroup>
-    <Compile Include="HarmonyCommands\ConsoleCmdBsPurgeBadDrones.cs" />
     <Compile Include="HarmonyPatches\BeyondStorage_Init.cs" />
     <Compile Include="HarmonyPatches\Block\Repair\ItemActionRepair_Repair_Patches.cs" />
     <Compile Include="HarmonyPatches\Block\Upgrade\ItemActionRepair_Upgrade_Patches.cs" />
+    <Compile Include="HarmonyPatches\Informatics\XUiC_RecipeTracker_IngredientEntry_Patches.cs" />
     <Compile Include="HarmonyPatches\Informatics\XUiC_HUDStatBar_Patches.cs" />
     <Compile Include="HarmonyPatches\Item\Texture\ItemActionTextureBlock_fireShotLater_Patch.cs" />
     <Compile Include="HarmonyPatches\Item\Texture\ItemActionTextureBlock_FloodFill_Patch.cs" />
-    <Compile Include="HarmonyPatches\PowerSource\Find_Power_Source_Patches.cs" />
     <Compile Include="HarmonyPatches\UI\XUiC_CraftingQueue_Patches.cs" />
     <Compile Include="HarmonyPatches\Item\Craft\XUiC_IngredientEntry_Patches.cs" />
     <Compile Include="HarmonyPatches\Item\Craft\XUiC_RecipeCraftCount_Patches.cs" />
@@ -101,11 +100,11 @@
     <Compile Include="Scripts\Data\StorageSourceItemDataStore.cs" />
     <Compile Include="Scripts\Data\UniqueItemTypeCache.cs" />
     <Compile Include="Scripts\Diagnostics\NameLookups.cs" />
-    <Compile Include="Scripts\Diagnostics\PurgeBadDrones.cs" />
     <Compile Include="Scripts\Game\Item\ItemActionTextureBlockExposed.cs" />
     <Compile Include="Scripts\Infrastructure\ModLifecycleManager.cs" />
     <Compile Include="Scripts\Configuration\ModConfig.cs" />
     <Compile Include="Scripts\Infrastructure\TypeMatchingHelper.cs" />
+    <Compile Include="Scripts\Infrastructure\ValidationHelper.cs" />
     <Compile Include="Scripts\Infrastructure\WorldTools.cs" />
     <Compile Include="Scripts\Storage\AllowedSourcesSnapshot.cs" />
     <Compile Include="Scripts\Storage\ItemStackCacheManager.cs" />
