Add patch to display remaining item counts for temporary messages after repairs and upgrades

--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -69,6 +69,7 @@
     <Compile Include="HarmonyPatches\BeyondStorage_Init.cs" />
     <Compile Include="HarmonyPatches\Block\Repair\ItemActionRepair_Repair_Patches.cs" />
     <Compile Include="HarmonyPatches\Block\Upgrade\ItemActionRepair_Upgrade_Patches.cs" />
+    <Compile Include="HarmonyPatches\Informatics\XUiMPlayerInventory_StorageIntegration_Patches.cs" />
     <Compile Include="HarmonyPatches\Informatics\Find_ItemStack_Setter_Patch.cs" />
     <Compile Include="HarmonyPatches\Informatics\Stack_Partial_Patch.cs" />
     <Compile Include="HarmonyPatches\Informatics\Stack_Drop_Merge_Patch.cs" />
