--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -71,6 +71,9 @@
     <Compile Include="HarmonyPatches\Block\Upgrade\ItemActionRepair_Upgrade_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\BlockSecureLootSigned_Lockpick_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\BlockSecureLoot_Lockpick_Patches.cs" />
+    <Compile Include="HarmonyPatches\Functions\Item_Action_Entry_Purchase_Patches.cs" />
+    <Compile Include="HarmonyPatches\Functions\XUiMPlayerInventory_Buy_and_Sell_Patches.cs" />
+    <Compile Include="HarmonyPatches\Functions\XUiM_PlayerInventory_Currency_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\TEFeatureLockPickable_Lockpick_Patches.cs" />
     <Compile Include="HarmonyPatches\Informatics\XUiMPlayerInventory_StorageIntegration_Patches.cs" />
     <Compile Include="HarmonyPatches\Informatics\Find_ItemStack_Setter_Patch.cs" />
@@ -117,6 +120,7 @@
     <Compile Include="Scripts\Data\TypeCastingHelper.cs" />
     <Compile Include="Scripts\Data\UniqueItemTypeCache.cs" />
     <Compile Include="Scripts\Diagnostics\NameLookups.cs" />
+    <Compile Include="Scripts\Game\Functions\PurchasingCommon.cs" />
     <Compile Include="Scripts\Game\Item\ItemActionTextureBlockExposed.cs" />
     <Compile Include="Scripts\Game\Item\PaintOperationContext.cs" />
     <Compile Include="Scripts\Infrastructure\ModLifecycleManager.cs" />
