--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -65,6 +65,7 @@
     <Message Text="Mod packaged into directory $(ModPackageDir)" Importance="High" />
   </Target>
   <ItemGroup>
+    <Compile Include="HarmonyCommands\ConsoleCmdBsReloadStorage.cs" />
     <Compile Include="HarmonyCommands\ConsoleCmdBsShowConfig.cs" />
     <Compile Include="HarmonyPatches\BeyondStorage_Init.cs" />
     <Compile Include="HarmonyPatches\Block\Repair\ItemActionRepair_Repair_Patches.cs" />
@@ -75,6 +76,7 @@
     <Compile Include="HarmonyPatches\Functions\XUiMPlayerInventory_Buy_and_Sell_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\XUiM_PlayerInventory_Currency_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\TEFeatureLockPickable_Lockpick_Patches.cs" />
+    <Compile Include="HarmonyPatches\Informatics\XUiC_CollectedItemList_StorageIntegration_Patches.cs" />
     <Compile Include="HarmonyPatches\Informatics\XUiMPlayerInventory_StorageIntegration_Patches.cs" />
     <Compile Include="HarmonyPatches\Informatics\Find_ItemStack_Setter_Patch.cs" />
     <Compile Include="HarmonyPatches\Informatics\Stack_Partial_Patch.cs" />
