--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -111,6 +111,7 @@
     <Compile Include="HarmonyPatches\Vehicle\Refuel\EntityVehicle_Patches.cs" />
     <Compile Include="HarmonyPatches\Vehicle\Repair\XUiM_Vehicle_Patches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scripts\Data\CurrencyCache.cs" />
     <Compile Include="Scripts\Data\DragDropAnalyzer.cs" />
     <Compile Include="Scripts\Data\IStorageSource.cs" />
     <Compile Include="Scripts\Data\FilterStacksStore.cs" />
@@ -125,6 +126,7 @@
     <Compile Include="Scripts\Game\Functions\PurchasingCommon.cs" />
     <Compile Include="Scripts\Game\Item\ItemActionTextureBlockExposed.cs" />
     <Compile Include="Scripts\Game\Item\PaintOperationContext.cs" />
+    <Compile Include="Scripts\Infrastructure\ActionHelper.cs" />
     <Compile Include="Scripts\Infrastructure\ModLifecycleManager.cs" />
     <Compile Include="Scripts\Configuration\ModConfig.cs" />
     <Compile Include="Scripts\Infrastructure\TypeMatchingHelper.cs" />
