--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -72,11 +72,15 @@
     <Compile Include="HarmonyPatches\Block\Upgrade\ItemActionRepair_Upgrade_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\BlockSecureLootSigned_Lockpick_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\BlockSecureLoot_Lockpick_Patches.cs" />
+    <Compile Include="HarmonyPatches\Functions\Item_Action_Entry_Sell_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\Item_Action_Entry_Purchase_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\XUiMPlayerInventory_Buy_and_Sell_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\XUiM_PlayerInventory_Currency_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\TEFeatureLockPickable_Lockpick_Patches.cs" />
+    <Compile Include="HarmonyPatches\Informatics\Stack_MoveAll_Patch.cs" />
     <Compile Include="HarmonyPatches\Informatics\XUiC_CollectedItemList_StorageIntegration_Patches.cs" />
+    <Compile Include="HarmonyPatches\Informatics\XUiC_VehicleStorageWindowGroup_Patches.cs" />
+    <Compile Include="HarmonyPatches\Informatics\XUiC_WorkstationWindowGroup_Patches.cs" />
     <Compile Include="HarmonyPatches\Informatics\XUiMPlayerInventory_StorageIntegration_Patches.cs" />
     <Compile Include="HarmonyPatches\Informatics\Find_ItemStack_Setter_Patch.cs" />
     <Compile Include="HarmonyPatches\Informatics\Stack_Partial_Patch.cs" />
