--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -31,8 +31,19 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <ItemGroup>
+    <CodeAnalysisFiles Include="Humanizer.*;Microsoft.*;System.*" />
+  </ItemGroup>
+  <PropertyGroup>
+    <CodeAnalysisScriptDir>Code_Analysis</CodeAnalysisScriptDir>
+    <CodeAnalysisScriptFullDir>$(MSBuildProjectDirectory)\$(CodeAnalysisScriptDir)</CodeAnalysisScriptFullDir>
+  </PropertyGroup>
+  <Target Name="CopyCodeAnalysisFiles" BeforeTargets="Build">
+    <Message Text="Updating code analysis files to: $(CodeAnalysisScriptFullDir)" Importance="High" />
+    <Copy SourceFiles="@(CodeAnalysisFiles)" DestinationFolder="$(CodeAnalysisScriptFullDir)" SkipUnchangedFiles="true"/>
+  </Target>
   <Target Name="CodeQualityChecks" BeforeTargets="Build">
-    <Exec Command="python Code_Analysis\code_check.py" ContinueOnError="false" WorkingDirectory="$(ProjectDir)">
+    <Exec Command="python $(CodeAnalysisScriptDir)\code_check.py" ContinueOnError="false" WorkingDirectory="$(ProjectDir)">
       <Output TaskParameter="ExitCode" PropertyName="CodeQualityChecksExitCode" />
     </Exec>
     <Error Condition="'$(CodeQualityChecksExitCode)' != '0'" Text="Code quality checks failed with exit code $(CodeQualityChecksExitCode). Build halted due to errors." />
