Add correct item counts in radial menus for ammo selection

--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -83,6 +83,7 @@
     <Compile Include="HarmonyPatches\Block\Upgrade\ItemActionRepair_Upgrade_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\BlockSecureLootSigned_Lockpick_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\BlockSecureLoot_Lockpick_Patches.cs" />
+    <Compile Include="HarmonyPatches\Functions\Item_Action_Attack_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\Item_Action_Entry_Sell_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\Item_Action_Entry_Purchase_Patches.cs" />
     <Compile Include="HarmonyPatches\Functions\XUiMPlayerInventory_Buy_and_Sell_Patches.cs" />
